--- a/app/templates/_modal.html
+++ b/app/templates/_modal.html
@@ -19,7 +19,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Save" form="{{ form.id }}">
+          <input class="btn btn-primary" id="{{ form.id }}-submit" name="submit" type="submit" value="Save" form="{{ form.id }}">
         </div>
       </div>
     </div>
