--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -138,7 +138,17 @@
         }
         ISODate = function(date)
         {
-            return moment(date).format("YYYY-MM-DDT00:00:00.000") + "Z";
+            return date.toISOString();
+        }
+
+        minsToHHMM = function (mins) {
+            var hours   = Math.floor(mins / 60);
+            var minutes = Math.floor(mins - ( hours * 60));
+
+            // Appends 0 when unit is less than 10
+            if (hours   < 10) {hours   = "0"+hours;}
+            if (minutes < 10) {minutes = "0"+minutes;}
+            return hours+':'+minutes;
         }
     </script>
 {% endblock %}
