--- a/app/templates/tasks/tasks.html
+++ b/app/templates/tasks/tasks.html
@@ -42,7 +42,7 @@
         <button class="btn btn-dark" id="{{ date_right_button_id }}"><i class="fas fa-chevron-right"></i></button>
     </div>
     <div class="col-sm-auto">
-        <button id="{{ today_button }}" type="button" class="btn btn-dark">
+        <button id="{{ today_button_id }}" type="button" class="btn btn-dark">
             {{ today_button_name }}
         </button>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{ create_task_modal_id }}">
